--- a/client/src/components/layout/header/styles.module.scss
+++ b/client/src/components/layout/header/styles.module.scss
@@ -16,12 +16,24 @@
     }
 
     h1 {
-      font-size: 0;
+      @extend %sr-only;
     }
   }
 
   &__controls {
     @extend %align;
     margin-right: 0.8rem;
+    font-weight: bold;
+
+    span:last-child {
+      padding-left: 0.4rem;
+      line-height: 1;
+    }
+
+    &:hover {
+      span:last-child {
+        text-decoration: underline;
+      }
+    }
   }
 }
