[:sparkles: FEAT]  SignIn template & components

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -25,5 +25,12 @@ body {
 
 main {
   flex: 1;
-  @extend %flex;
+
+  &.flex {
+    @extend %flex;
+  }
+
+  &.dark {
+    background-color: $clr-black;
+  }
 }
