--- a/client/src/styles/shared/_typo.scss
+++ b/client/src/styles/shared/_typo.scss
@@ -4,6 +4,12 @@
   font-weight: bold;
 }
 
+%title-24 {
+  font-size: 2.4rem;
+  line-height: 1;
+  font-weight: bold;
+}
+
 %desc-20 {
   font-size: 2rem;
   line-height: 1;
@@ -11,7 +17,7 @@
 }
 
 %desc-18 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1;
   font-weight: bold;
 }
