--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -2,6 +2,7 @@
   --font-body: 'Avenir', Helvetica, Arial, sans-serif;
   --clr-white: #ffffff;
   --clr-black: #12002b;
+  --clr-red: #bc1900;
   --clr-primary-400: #00bc77;
   --clr-primary-300: #42b983;
   --clr-grey-700: #222222;
@@ -13,6 +14,7 @@ $font-body: var(--font-body);
 
 $clr-white: var(--clr-white);
 $clr-black: var(--clr-black);
+$clr-red: var(--clr-red);
 $clr-primary-400: var(--clr-primary-400);
 $clr-primary-300: var(--clr-primary-300);
 $clr-grey-700: var(--clr-grey-700);
