--- a/client/src/components/common/field/button/styles.module.scss
+++ b/client/src/components/common/field/button/styles.module.scss
@@ -8,7 +8,8 @@
   background-color: $clr-primary-400;
   color: $clr-white;
 
-  &:focus {
+  &:focus,
+  &:focus-visible {
     outline: none;
     border: none;
   }
@@ -51,5 +52,8 @@
 }
 .big {
   @extend %desc-18;
+}
+.small {
+  padding: 10px;
 }
 /* #endregion  /**======== Modifier =========== */
