--- a/client/src/components/template/sign-in/styles.module.scss
+++ b/client/src/components/template/sign-in/styles.module.scss
@@ -23,4 +23,11 @@
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
 }
+.formError {
+  display: block;
+  color: $clr-red;
+  padding: 4px 0;
+  font-size: 1.4rem;
+  text-align: left;
+}
 /* #endregion  /**======== Element =========== */
