--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -33,4 +33,25 @@ main {
   &.dark {
     background-color: $clr-black;
   }
+
+  &.center {
+    @extend %center;
+  }
+}
+
+#modal-root {
+  display: flex;
+  width: 100%;
+  overflow-y: auto;
+  min-height: 100vh;
+  position: fixed;
+  inset: 0;
+  z-index: 10;
+  pointer-events: none;
+
+  .backdrop {
+    flex: 1;
+    @extend %center;
+    background-color: rgba(0, 0, 0, 0.35);
+  }
 }
