--- a/client/src/styles/shared/_typo.scss
+++ b/client/src/styles/shared/_typo.scss
@@ -4,6 +4,12 @@
   font-weight: bold;
 }
 
+%title-32 {
+  font-size: 3.2rem;
+  line-height: 1;
+  font-weight: bold;
+}
+
 %title-24 {
   font-size: 2.4rem;
   line-height: 1;
